Fixed nav bar button text color.

--- a/TwitterClone/Base.lproj/Main.storyboard
+++ b/TwitterClone/Base.lproj/Main.storyboard
@@ -390,6 +390,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="EnC-Cc-it7"/>
+        <segue reference="bCw-Yb-SMB"/>
     </inferredMetricsTieBreakers>
 </document>
